<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HobbyAthletes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_myevent">My Races</string>
    <string name="action_profile">Profile</string>
    <string name="action_login">Login</string>
    <string name="action_info">Info</string>
    <string name="action_exit">Exit</string>
    <string name="textView_username">Username</string>
    <string name="textView_password">Password</string>
    <string name="test">LogIn</string>
    <string name="button_exit">Exit</string>

    <!-- URL Strings -->
    <string name="str_url_login">http://hobbyathletes.com/mobile/JSON/mobile_login.php</string>
    <string name="str_url_login_fb">http://hobbyathletes.com/mobile/JSON/mobile_login_fb.php</string>
    <string name="str_url_myevent">http://hobbyathletes.com/mobile/JSON/myEventsList_noCookies.php</string>
    <string name="str_url_myeventref">http://hobbyathletes.com/mobile/JSON/myEventDetails_noCookies.php</string>
    <string name="str_url">http://hobbyathletes.com</string>

    <string name="database_name_uc">userCredentials.db</string>
    <string name="database_name_myevent">myevent.db</string>
    <string name="myevent">My Races</string>
    <string name="login">Login</string>
    <string name="info">Info</string>
    <string name="exit">Exit</string>
    <string name="title_activity_myevent">My Races</string>
    <string name="button_sql">SQL</string>
    <string name="title_activity_profile">Profile</string>
    <string name="button_login">login</string>
    <string name="button_logoff">logoff</string>
    <string name="textView_login_result">Result:</string>
    <string name="button_close">Close</string>
    <string name="button_cancel">Cancel</string>
    <string name="buttonEventGet">Refresh</string>
    <string name="title_activity_myeventref">My Race</string>
    <string name="title_activity_image">Photos</string>
    <string name="title_activity_login">Login</string>
    <string name="placeholder">Placeholder</string>
    <string name="button_image">Photos</string>
    <string name="button_calendar">Calendar</string>
    <string name="button_url">Link</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myevent_action_search">My Race</string>

    <!-- About -->
    <string name="title_activity_about">Info</string>
    <string name="copyright">© 2014 Krause IT Consulting\r\nAll rights reserved.</string>
    <string name="logo_str">logo</string>

    <!-- Activity -->
    <string name="activity_profile_name">Name:</string>
    <string name="activity_profile_from">From:</string>
    <string name="activity_profile_born">Born:</string>
    <string name="activity_profile_gender">Gender:</string>
    <string name="activity_profile_aboutme">About me:</string>

    <!-- Login -->
    <string name="already">Already a HobbyAthletes user?</string>
    <string name="signup"><u>Sign-up a new HobbyAthletes user.</u></string>
    <string name="forgot"><u>Forgot your Password?</u></string>
    <string name="facebook_app_id">165586390167877</string>

    <string name="title_activity_my">MyActivity</string>

</resources>
