<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".home" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_event"
        android:title="@string/action_myevent"
        android:orderInCategory="110"
        android:showAsAction="never" />

    <item android:id="@+id/action_login"
        android:title="@string/action_login"
        android:orderInCategory="120"
        android:showAsAction="never" />

    <item android:id="@+id/action_info"
        android:title="@string/action_info"
        android:orderInCategory="140"
        android:showAsAction="never" />

    <item android:id="@+id/action_exit"
        android:title="@string/action_exit"
        android:orderInCategory="150"
        android:showAsAction="never" />
</menu>
