<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.hobbyathletes.hobbyathletes.profile"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView_profile_image"
                android:background="@drawable/imageview_border"
                android:padding="10dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="150dp"
                android:layout_height="fill_parent"
                android:background="#FFFAD5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:text="@string/activity_profile_name"
                    android:id="@+id/textView_profile_name"
                    android:textColor="#6C809B"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:text="@string/activity_profile_from"
                    android:id="@+id/textView_profile_from"
                    android:textColor="#6C809B" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:text="@string/activity_profile_born"
                    android:id="@+id/textView_profile_born"
                    android:textColor="#6C809B" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:text="@string/activity_profile_gender"
                    android:id="@+id/textView_profile_gender"
                    android:textColor="#6C809B" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:text="@string/activity_profile_aboutme"
                    android:id="@+id/textView_profile_aboutme"
                    android:textColor="#6C809B"
                    android:layout_marginBottom="10dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/textView_profile_name_value"
                    android:textColor="#465a6c"
                    android:layout_gravity="left"
                    android:textStyle="bold"
                    android:singleLine="true"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/textView_profile_from_value"
                    android:textColor="#465a6c"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/textView_profile_born_value"
                    android:textColor="#465a6c"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/textView_profile_gender_value"
                    android:textColor="#465a6c"
                    android:layout_gravity="left"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/textView_profile_aboutme_value"
                    android:textColor="#465a6c"
                    android:layout_gravity="left"
                    android:singleLine="false"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView_profile_flag"
            android:layout_gravity="right|top"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_height="wrap_content"
            android:text="@string/button_logoff"
            android:id="@+id/button_login_logoff"
            android:layout_width="120dp"
            android:background="@drawable/button_border"
            android:textColor="#ff50607a"
            android:onClick="buttonLogoff"
            android:layout_marginRight="5dp" />
    </LinearLayout>

</LinearLayout>
