<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.hobbyathletes.hobbyathletes.MyEvent.myeventref">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder"
                    android:id="@+id/textView_eventref_name"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="#ff465a6c"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:singleLine="true" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/imageView_marker"
                        android:src="@drawable/marker"
                        android:onClick="buttonOpenMap"
                        android:clickable="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder"
                        android:id="@+id/textView_eventref_location"
                        android:textSize="20dp"
                        android:textColor="#395370"
                        android:onClick="buttonOpenMap"
                        android:clickable="true" />

                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"
        android:layout_above="@+id/linearLayout4"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#ffc0c0c0"
                    android:layout_marginBottom="2dp"
                    android:id="@+id/line1" />

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/listView_eventref" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#ffc0c0c0"
                    android:id="@+id/line2"
                    android:layout_alignParentBottom="false"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/listView_eventref" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout4"
        android:gravity="bottom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:text="@string/button_image"
                android:id="@+id/button_eventref_images"
                android:background="@drawable/button_border"
                android:textColor="#ff50607a"
                 />

            <Button
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:text="@string/button_calendar"
                android:id="@+id/button_eventref_calendar"
                android:background="@drawable/button_border"
                android:textColor="#ff50607a"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:onClick="buttonSetCalendar" />

            <Button
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:text="@string/button_url"
                android:id="@+id/button_eventref_url"
                android:background="@drawable/button_border"
                android:textColor="#ff50607a"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:onClick="buttonOpenLink" />
        </RelativeLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/fragment_image">
    </FrameLayout>

</RelativeLayout>
